<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="#FAFAFA">

    <Button
        android:id="@+id/btnCreateAdvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Create_advert"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnShowAllItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Show_lost_and_found_button" />

    <Button
        android:id="@+id/btnShowOnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_map"
        android:layout_marginTop="16dp" />

</LinearLayout>
